4565.	[cleanup]	The inline macro versions of isc_buffer_put*()
			did not implement automatic buffer reallocation.
			[RT #44216]

4564.	[maint]		Update the built in managed keys to include the
			upcoming root KSK. [RT #44579]
			
4563.	[bug]		Modified zones would occasionally fail to reload.
			[RT #39424]

4562.	[func]		Add additional memory statistics currently malloced
			and maxmalloced per memory context. [RT #43593]

4561.	[port]		Silence a warning in strict C99 compilers. [RT #44414]

4560.	[bug]		mdig: add -m option to enable memory debugging rather
			than having it on all the time. [RT #44509]

4559.	[bug]		openssl_link.c didn't compile if ISC_MEM_TRACKLINES
			was turned off.  [RT #44509]

4558.	[bug]		Synthesised CNAME before matching DNAME was still
			being cached when it should not have been.  [RT #44318]

4557.	[security]	Combining dns64 and rpz can result in dereferencing
			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]

4556.	[bug]		Sending an EDNS Padding option using "dig
			+ednsopt" could cause a crash in dig. [RT #44462]

4555.	[func]		dig +ednsopt: EDNS options can now be specified by
			name in addition to numeric value. [RT #44461]

4554.	[bug]		Remove double unlock in dns_dispatchmgr_setudp.
			[RT #44336]

4553.	[bug]		Named could deadlock there were multiple changes to
			NSEC/NSEC3 parameters for a zone being processed at
			the same time. [RT #42770]

4552.	[bug]		Named could trigger a assertion when sending notify
			messages. [RT #44019]

4551.	[test]		Add system tests for integrity checks of MX and
			SRV records. [RT #43953]

4550.	[cleanup]	Increased the number of available master file
			output style flags from 32 to 64. [RT #44043]

4549.	[func]		Added support for the EDNS TCP Keepalive option
			(RFC 7828). [RT #42126]

4548.	[func]		Added support for the EDNS Padding option (RFC 7830).
			[RT #42094]

4547.	[port]		Add support for --enable-native-pkcs11 on the AEP
			Keyper HSM. [RT #42463]
